--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 
-:root{
-    --fondo: #06181e;
-    --figura: #d0d6ea;
+:root {
+    --fondo: #2c5e9f;
+    --figura: #ebebeb;
 }
 
 * {
@@ -16,9 +16,9 @@ body {
     color: var(--figura);
 }
 
-body.portada{
-    background:var(--fondo) url('images/332.png') right bottom no-repeat;
-    background-size:auto 100%;
+body.portada {
+    background: var(--fondo) url("images/332.png") right bottom no-repeat;
+    background-size: auto 100%;
 }
 
 a {
@@ -31,8 +31,8 @@ a:hover {
     color: rgba(255, 255, 255, 0.75);
 }
 
-:hover{
-    transition: all ease .5s;
+:hover {
+    transition: all ease 0.5s;
 }
 
 div.container {
@@ -40,19 +40,21 @@ div.container {
     margin: 0 auto;
 }
 
-nav, footer {
+nav,
+footer {
     width: 98%;
-    margin-left:1%;
-    margin-right:1%;
+    margin-left: 1%;
+    margin-right: 1%;
     min-height: 10vh;
     display: flex;
 }
 
-nav p, footer p {
+nav p,
+footer p {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    margin:auto;
+    margin: auto;
 }
 
 .active {
@@ -62,132 +64,131 @@ nav p, footer p {
 
 /* para la página de portada */
 
-header {   
+header {
     width: 98%;
-    margin-left:1%;
-    margin-right:1%;
+    margin-left: 1%;
+    margin-right: 1%;
     min-height: 80vh;
 }
 
-header div{
+header div {
     width: 50%;
-    padding-top:15vh;
+    padding-top: 15vh;
 }
 
-header div h1{
-    font-size:calc(1.5rem + 1vw);
+header div h1 {
+    font-size: calc(1.5rem + 1vw);
     line-height: 1;
     text-shadow: 0 0 2px var(--fondo);
 }
 
-header div p{
-    margin-top:1rem;
+header div p {
+    margin-top: 1rem;
     line-height: 1.5;
     text-shadow: 0 0 2px var(--fondo);
 }
 
-@media screen and (orientation:portrait){
-
-    header div{
+@media screen and (orientation: portrait) {
+    header div {
         width: 100%;
         line-height: 1.5;
-    }     
+    }
 }
 
 /* para todas las páginas que no son portada */
 
-main{
+main {
     width: 100%;
-    padding-top:10vh;
-    min-height: 70vh;    
+    padding-top: 10vh;
+    min-height: 70vh;
 }
 
 /* para la página de películas */
 
-main article{
-    float:left;
-    margin:1%;
-    width:18%;
-    background:rgba(255,255,255,0.1);
+main article {
+    float: left;
+    margin: 1%;
+    width: 18%;
+    background: rgba(255, 255, 255, 0.1);
 }
 
-main article img{
-    width:100%;
-    height:auto;
+main article img {
+    width: 100%;
+    height: auto;
     opacity: 0.6;
 }
 
-main article:hover img{
-    opacity:1;
+main article:hover img {
+    opacity: 1;
 }
 
-main article div{
-    padding:5%;
-    min-height:7.5vh;
+main article div {
+    padding: 5%;
+    min-height: 7.5vh;
 }
 
-main article div h2{
-    font-size:1rem;
-    line-height:1.2;
-    min-height:4rem;
+main article div h2 {
+    font-size: 1rem;
+    line-height: 1.2;
+    min-height: 4rem;
     letter-spacing: 0.05rem;
 }
 
-@media screen and (orientation:portrait){
-    main article{
-        width:48%;
-    }     
+@media screen and (orientation: portrait) {
+    main article {
+        width: 48%;
+    }
 }
 
 /* para cada página de película */
 
-main section{
-    float:left;
-    margin:3% 1% 10% 1%;
-    width:98%;   
+main section {
+    float: left;
+    margin: 3% 1% 10% 1%;
+    width: 98%;
 }
 
-main section h1{
-    font-size:calc(1.5rem + 1vw);
+main section h1 {
+    font-size: calc(1.5rem + 1vw);
     line-height: 1;
 }
 
-main section h3{
-    font-size:1.3rem;
+main section h3 {
+    font-size: 1.3rem;
     line-height: 2.5;
 }
 
-main section h4{
-    font-size:1.2rem;
+main section h4 {
+    font-size: 1.2rem;
     line-height: 2.5;
 }
 
-main section img{
-    max-width:100%;
-    height:auto;
-    margin:1.5rem 0;
+main section img {
+    max-width: 100%;
+    height: auto;
+    margin: 1.5rem 0;
 }
 
-main section p{
-    max-width:100%;
+main section p {
+    max-width: 100%;
     line-height: 1.6;
 }
 
-@media screen and (orientation:landscape){
-    main section p{
-        max-width:75%;
+@media screen and (orientation: landscape) {
+    main section p {
+        max-width: 75%;
         line-height: 1.8;
-    }    
+    }
 }
 
 /* para las páginas de locaciones y ganancias */
 
-main div#mapa{
-    margin:1%;
-    width:98%;
-    height:60vh;
+main div#mapa {
+    margin: 1%;
+    width: 98%;
+    height: 60vh;
 }
 
-main canvas#grafico{
-    background:#232243;
+main canvas#grafico {
+    background: rgba(174, 183, 228, 0.77);
 }
